# flipout-ts

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
demo/: .gitignore  README.md  bezier-probe.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/public/: teapot.json
demo/scripts/: bake-meshes.mjs  bake-teapot.mjs  smoke.mts
demo/src/: bezier-probe.ts  main.ts
fixtures/: cube-edge.json  cube-face-diagonal.json  cube-space-diagonal.json  grid-diagonal.json  grid-edge.json  grid-mid.json  icosahedron-antipodal.json  icosahedron-edge.json  icosahedron-mid.json  icosphere-antipodal.json  icosphere-bezier-3pt-r1.json  icosphere-bezier-4pt-r2.json  icosphere-short.json  quad-across.json  quad-diagonal.json  quad-edge.json  spot-bezier-3pt-r1.json  spot-bezier-4pt-r2.json  spot-bezier-5pt-r3.json  teapot-bezier-2pt-r1.json  teapot-bezier-2pt-r3.json  teapot-bezier-3pt-r0.json  teapot-bezier-3pt-r1.json  teapot-bezier-3pt-r3.json  teapot-bezier-4pt-r1.json  teapot-bezier-4pt-r3.json  teapot-bezier-4pt-r5.json  teapot-bezier-5pt-r2.json  teapot-bezier-6pt-r1.json  teapot-far.json  teapot-mid.json  teapot-near.json  tetrahedron-edge.json  tetrahedron-opposite.json
src/: index.ts
src/flipout/: dijkstra.ts  flip-edge-network.ts  geodesic-spline.ts  index.ts
test/: scaffold.test.ts
tools/: README.md  gen_fixtures.py
tools/gen_bezier_fixtures/: CMakeLists.txt  README.md  main.cpp
(+55 files in other folders)
